--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -32,9 +32,7 @@
      "output_type": "stream",
      "text": [
       "[WDM] - Current google-chrome version is 87.0.4280\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/87.0.4280.20/chromedriver_win32.zip\n"
+      "[WDM] - Get LATEST driver version for 87.0.4280\n"
      ]
     },
     {
@@ -48,6 +46,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[WDM] - Get LATEST driver version for 87.0.4280\n",
+      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/87.0.4280.20/chromedriver_win32.zip\n",
       "[WDM] - Driver has been saved in cache [C:\\Users\\ramya\\.wdm\\drivers\\chromedriver\\win32\\87.0.4280.20]\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA20057_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA16715_hires.jpg'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Metric</th>\\n      <th>Value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,23 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['Cerberus Hemisphere Enhanced',\n",
-       "  'Schiaparelli Hemisphere Enhanced',\n",
-       "  'Syrtis Major Hemisphere Enhanced',\n",
-       "  'Valles Marineris Hemisphere Enhanced'],\n",
-       " ['https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
-       "  'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
-       "  'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
-       "  'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'])"
+       "[{'Cerberus Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'Schiaparelli Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'Syrtis Major Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'Valles Marineris Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,36 +236,41 @@
     "# Find the body of the page that includes the necessary links for the hemispheres\n",
     "link1 = browser.find_by_tag('div[id=\"product-section\"]')\n",
     "h_count = 0\n",
-    "title = list()\n",
-    "img_url = list()\n",
-    "\n",
+    "hemisphere_image_urls = list()\n",
     "\n",
     "# Within the div: product-section, there are 4 class items. Each one corresponds to a different hemisphere \n",
     "while h_count < 4:\n",
+    "    \n",
+    "    # Initialize dictionary to store each hemisphere's information\n",
+    "    temp = dict()\n",
+    "    \n",
+    "    # Navigate to the hemisphere's section\n",
     "    link2 = link1.find_by_tag('div[class=\"item\"]')[h_count]\n",
     "    link3 = link2.find_by_tag(\"a\")\n",
     "    link4 = link3.last\n",
     "    link5 = link4.click()\n",
     "    time.sleep(1)\n",
+    "    \n",
     "    # Get the hemisphere name, store in a list\n",
     "    hlink1 = browser.find_by_tag('section[class=\"block metadata\"]')\n",
-    "    #title.append(hlink1.find_by_tag('h2[class=\"title\"]').text)\n",
+    "    key = hlink1.find_by_tag('h2[class=\"title\"]').text\n",
     "    \n",
     "    # Get the full size image url for each hemisphere\n",
     "    hlink2 = browser.find_by_tag('div[id=\"wide-image\"]')\n",
     "    hlink3 = hlink2.find_by_tag('img[class=\"wide-image\"]')\n",
-    "    #img_url.append(hlink3['src'])\n",
+    "    value = hlink3['src']\n",
+    "    \n",
+    "    # Save the hemisphere's data in the temp dictionary, append the dictionary to the list\n",
+    "    temp[key]=value\n",
+    "    hemisphere_image_urls.append(temp)\n",
     "    \n",
     "    # Go back to the main page and start again for the next hemisphere\n",
     "    link6 = browser.back()\n",
     "    link1 = browser.find_by_tag('div[id=\"product-section\"]')\n",
     "    h_count +=1\n",
-    "title, img_url\n",
-    "# Save as a dictionary\n",
-    "mars_facts = pd.DataFrame({'Metric': metric,\n",
-    "                           'Value' : value}, \n",
-    "                          columns = ['Metric','Value'])\n",
-    "mars_facts.set_index('Metric')"
+    "\n",
+    "#Print the list of Mars hemisphere data\n",
+    "hemisphere_image_urls\n"
    ]
   }
  ],
