--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -32,7 +32,8 @@
      "output_type": "stream",
      "text": [
       "[WDM] - Current google-chrome version is 87.0.4280\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n"
+      "[WDM] - Get LATEST driver version for 87.0.4280\n",
+      "[WDM] - Driver [C:\\Users\\ramya\\.wdm\\drivers\\chromedriver\\win32\\87.0.4280.20\\chromedriver.exe] found in cache\n"
      ]
     },
     {
@@ -40,15 +41,6 @@
      "output_type": "stream",
      "text": [
       " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/87.0.4280.20/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\ramya\\.wdm\\drivers\\chromedriver\\win32\\87.0.4280.20]\n"
      ]
     }
    ],
@@ -126,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA16715_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19177_hires.jpg'"
       ]
      },
      "execution_count": 6,
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +211,7 @@
        " {'Valles Marineris Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +263,49 @@
     "\n",
     "#Print the list of Mars hemisphere data\n",
     "hemisphere_image_urls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Recent_news_title': 'MOXIE Could Help Future Rockets Launch Off Mars',\n",
+       " 'Recent_news_description': \"NASA's Perseverance rover carries a device to convert Martian air into oxygen that, if produced on a larger scale, could be used not just for breathing, but also for fuel.\",\n",
+       " 'Featured_image_url': 'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19177_hires.jpg',\n",
+       " 'Mars_facts': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Metric</th>\\n      <th>Value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'Hemispheres_images': [{'Cerberus Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       "  {'Schiaparelli Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       "  {'Syrtis Major Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       "  {'Valles Marineris Hemisphere Enhanced': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a single dictionary of the information\n",
+    "\n",
+    "Mars_info_dict = {\"Recent_news_title\": news_title,\n",
+    "                  \"Recent_news_description\": news_description,\n",
+    "                  \"Featured_image_url\": featured_image_url,\n",
+    "                  \"Mars_facts\": mars_facts_html,\n",
+    "                  \"Hemispheres_images\": hemisphere_image_urls} \n",
+    "\n"
    ]
   }
  ],
